apps/monitoring/templates/cloudflarewarp-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: cloudflarewarp
    namespace: monitoring
spec:
  plugin:
    cloudflarewarp:
      disableDefault: "false"
      trustip:
        - 2400:cb00::/32
