apps/monitoring/templates/ip-allowlist-traefik-middleware.yaml

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-allowlist
  namespace: monitoring
spec:
  ipAllowList:
    sourceRange:
      - 45.88.188.213/32
