apps/monitoring/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring
  namespace: monitoring
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`node-exporter.arcamh.com`)
      priority: 10
      services:
        - name: prometheus-node-exporter
          namespace: monitoring
          port: 9100
      # middlewares:
      #   - name: monitoring-allowlist
      #     namespace: monitoring
